--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>I Love You ❤️</title>
   <style>
@@ -103,4 +104,5 @@
     });
   </script>
 </body>
+
 </html>
